Adjust the logo font on the tablet to avoid overlapping with the menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ footer {
     #logo {
         width: auto;
         padding-left: 4px;
-        font-size: 250%;  
+        font-size: 180%;  
     }
 
     #logo-link {
